Kubernetes-Manifests-file/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
  labels:
    role: frontend
    env: demo
spec: 
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels: 
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec: 
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: frontend
          image: IMAGE_URI_FRONTEND
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
