Kubernetes-Manifests-file/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    role: api
  ports:
    - port: 80
      targetPort: 3500
      protocol: TCP
