Kubernetes-Manifests-file/frontend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    role: frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
